<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:configChanges="orientation|screenSize"
    tools:context=".RegisterActivity"
  >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/form_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText

                android:id="@+id/et_fname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:background="#E3DEDE"
                android:fontFamily="@font/sanspro"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/user1"
                android:drawablePadding="10dp"
                android:hint="@string/registration_fname"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:paddingTop="3dp"
                    android:fontFamily="@font/sanspro"
                    android:text="Gender"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/rb_f"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Female"
                        android:fontFamily="@font/sanspro"
                        android:textStyle="bold" />


                    <RadioButton
                        android:id="@+id/rb_m"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/sanspro"
                        android:text="Male"
                        android:textStyle="bold" />

                </RadioGroup>


            </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginRight="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="15dp"
    android:orientation="horizontal">
      <EditText
        android:id="@+id/et_birthdate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
          android:background="#E3DEDE"
          android:padding="10dp"
          android:layout_weight="1"
          android:fontFamily="@font/sanspro"
        android:drawableLeft="@drawable/calendar1"
        android:drawablePadding="10dp"
        android:hint="@string/registration_birthdate"
        android:editable="false"
        />

    <Button
        android:id="@+id/bt_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="Select Date"
        android:textSize="10dp" />

</LinearLayout>


            <EditText
                android:id="@+id/et_mob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:fontFamily="@font/sanspro"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="#E3DEDE"
                android:drawableLeft="@drawable/call"
                android:drawablePadding="10dp"
                android:hint="@string/registration_mobno"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="#E3DEDE"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/s_department"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:entries="@array/department" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="#E3DEDE"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/s_acadamic_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:entries="@array/acadamic_year" />


            </LinearLayout>





            <EditText
                android:id="@+id/et_collageid"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="#E3DEDE"
                android:padding="10dp"
                android:fontFamily="@font/sanspro"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/id_card1"
                android:drawablePadding="10dp"
                android:hint="@string/registration_cid"
                android:maxLength="12" />


            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#E3DEDE"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="10dp"
                android:fontFamily="@font/sanspro"
                android:drawableLeft="@drawable/address1"
                android:drawablePadding="10dp"
                android:hint="@string/registration_address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/padlock"
                android:hint="@string/registration_password"
                android:fontFamily="@font/sanspro"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:background="#E3DEDE"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:background="#E3DEDE"
                android:padding="10dp"
                android:fontFamily="@font/sanspro"
                android:drawablePadding="10dp"
                android:layout_marginRight="15dp"
                android:drawableLeft="@drawable/padlock"
                android:hint="@string/registration_confirm_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_submit"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:minHeight="40dp"
                    android:text="Submit"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


               <!-- <Button
                    android:id="@+id/bt_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:minHeight="40dp"
                    android:text="@string/reset"
                    android:textColor="@color/white"
                    android:textStyle="bold" />-->

            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>
